infra/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: consul
  labels:
    shared-gateway-access: 'true'
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    shared-gateway-access: 'true'
---
apiVersion: v1
kind: Namespace
metadata:
  name: portalit
  labels:
    shared-gateway-access: 'true'
